検索、ダウンロード、更新 12/26

--- a/labsw/templetes/search/kekka.html
+++ b/labsw/templetes/search/kekka.html
@@ -2,6 +2,8 @@
 {% block content %}
 {% block body %}
 	<h3 class="page-header">一覧</h3>
+	<p><a href="">検索TOPへ</a></p>
+	
 	<form method="post" action="{% url 'search:delete' %}">{# actionを変更する #}
 	<!--<table class="table table-striped table-bordered">-->
 	<table border="1">
