--- a/templetes/download/edit.html
+++ b/templetes/download/edit.html
@@ -1,6 +1,9 @@
 {% extends "base.html" %}
 
 {% block body %}
+    <table>
+        <tr><td>username:</td><td>{{ username }}</td></tr>
+    </table>
     <a href="{% url 'download:index' %}">一覧画面へ</a>
     <form enctype="multipart/form-data" action="" method="post">
         <table>
