auth画面とかのテンプレート作成、accountsはまだない

--- a/labsw/templetes/base.html
+++ b/labsw/templetes/base.html
@@ -2,7 +2,7 @@
 <html>
 <head lang="ja">
   <meta charset="UTF-8">
-  <title></title>
+  <title>{% block title %}{% endblock %}</title>
 </head>
 <body>
 {% block body %}
