--- a/labsw/templetes/search/search_file2.html
+++ b/labsw/templetes/search/search_file2.html
@@ -1,4 +1,4 @@
-{% extends "search/base.html" %}                           
+{% extends "base.html" %}
 {% block content %}                                        
 {% block body %}                                           
         <h3 class="page-header">検索</h3>                  
