文書登録できなかった問題の解消

--- a/labsw/templetes/download/edit.html
+++ b/labsw/templetes/download/edit.html
@@ -4,7 +4,7 @@
     <table>
         <tr><td>username:</td><td>{{ username }}</td></tr>
     </table>
-    <form enctype="multipart/form-data" action="/accounts/profile/" method="post">
+    <form enctype="multipart/form-data" action="../add/" method="post">
         <table>
             {{form.as_p}}
         </table>
