--- a/labsw/templetes/search/kekka.html
+++ b/labsw/templetes/search/kekka.html
@@ -3,7 +3,7 @@
 {% block body %}
 <center>
 	<h3 class="page-header">一覧</h3>
-	<p><a href="">検索TOPへ</a></p>
+	<p><a href="/search">検索TOPへ</a></p>
 
 	<!--<table class="table table-striped table-bordered">-->
 	<table border="1">
